tests/ui/wf/conflicting-impls.stderr
error[E0119]: conflicting implementations of trait `TryFrom<Ty>` for type `u8`
  --> $DIR/conflicting-impls.rs:13:1
   |
LL | impl TryFrom<Ty> for u8 {
   | ----------------------- first implementation here
...
LL | impl TryFrom<Ty> for u8 {
   | ^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `u8`

error[E0282]: type annotations needed
  --> $DIR/conflicting-impls.rs:7:53
   |
LL |       fn try_from(_: Ty) -> Result<Self, Self::Error> {
   |  _____________________________________________________^
LL | |
LL | |         loop {}
LL | |     }
   | |_____^ cannot infer type for enum `Result<u8, _>`

error[E0282]: type annotations needed
  --> $DIR/conflicting-impls.rs:16:53
   |
LL |       fn try_from(_: Ty) -> Result<Self, Self::Error> {
   |  _____________________________________________________^
LL | |
LL | |         loop {}
LL | |     }
   | |_____^ cannot infer type for enum `Result<u8, _>`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0119, E0282.
For more information about an error, try `rustc --explain E0119`.
